# BakuninConfig

./: Cargo.toml  README.MD
.github/: .editorconfig
.github/workflows/: .editorconfig  create-release.yml  create_release.yml  pr.yml  pull_request.yml  release.yml
examples/: create_config.rs  create_layer_config.rs  deserialize.rs  use-value.rs
src/: bak_error.rs  config.rs  config_macro.rs  errors.rs  lib.rs  traits.rs
src/builder/: config_builder.rs  env.rs  memory.rs  mod.rs  priority.rs
src/builder/files/: builder.rs  file.rs  finder.rs  folders.rs  handler_json.rs  handler_json5.rs  handler_macros.rs  handler_toml.rs  handler_yaml.rs  mod.rs
src/config_layer/: error.rs  file_handler.rs  layer.rs  layer_env.rs  layer_file.rs  layer_mem.rs  mod.rs
src/config_layer/handlers/: json.rs  mod.rs  toml.rs
src/file_finder/: alg_find_all.rs  alg_find_all_or_first.rs  alg_find_first.rs  alg_find_last.rs  error.rs  file_extension.rs  find_result.rs  finder.rs  mod.rs  os_directory.rs
src/model/: de.rs  errors.rs  from.rs  into.rs  iter.rs  merge.rs  mod.rs  new.rs  ser.rs  value.rs  visitor.rs
