[package]
name = "bakunin_config"
version = "0.3.0"
resolver = "2"
edition = "2021"
description = "Layered configuration for Rust applications."
authors = ["David Pires <dev@davidpires.pt>"]
readme = "README.MD"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Davidblkx/BakuninConfig"
keywords = ["config", "layered-config", "bakunin", "bakunin-config"]
categories = ["config"]

[dependencies]
thiserror = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
paste = "1.0"
log = "0.4"
directories = "5.0"
serde_json = { version = "1", optional = true }
toml = { version = "0.8.8", optional = true }
json5 = { version = "0.4.1", optional = true }
serde_yaml = { version = "0.9.27", optional = true }

[features]
default = ["toml", "json"]
json = ["dep:serde_json", "dep:json5"]
toml = ["dep:toml"]
json5 = ["dep:json5"]
yaml = ["dep:serde_yaml"]

[dev-dependencies]
serde_json = { version = "1" }
toml = { version = "0.8.8" }
json5 = { version = "0.4.1" }
serde_yaml = { version = "0.9.27" }
